fixed scrollbar showing up from nowhere

--- a/sidebar.css
+++ b/sidebar.css
@@ -29,7 +29,7 @@ button {
 
 .submenuBtn {
   color: #14a76c !important;
-  background-color: #2a2a2a !important;
+  background-color: #3a3a3a !important;
   /* border: 0.5px solid black; */
 }
 
@@ -62,6 +62,10 @@ button:hover {
 #footer {
   position: absolute;
   bottom: 10px;
+}
+
+.card {
+  transition: ease-in 0.5;
 }
 
 /* testing animations */
